--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 msgraph-sdk>=1.0.0
-azure-identity>=1.12.0 # Use a recent version
+azure-identity>=1.12.0
 requests
+python-dotenv>=1.0.0
+python-docx>=1.1.0 
